--- a/app/src/main/res/layout/home_tabs.xml
+++ b/app/src/main/res/layout/home_tabs.xml
@@ -32,7 +32,15 @@
                     android:id="@+id/week"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"></LinearLayout>
+                    android:orientation="vertical">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/btn_temp_detail"
+                        android:layout_gravity="center_horizontal"
+                        android:text="temp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/month"
