일자 : 2016-08-27 21:12                작성자 : MKH                수정내용 :                1. 기존의 액티비티 파일을 프래그먼트로 수정                2. 사용자 성향 페이지 작성(리스트뷰)                3. 기능 별로 패키지 구분

--- a/app/src/main/res/layout/page_home.xml
+++ b/app/src/main/res/layout/page_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.inu.h4.seoultriphelper.PageHomeFragment">
+    tools:context="com.inu.h4.seoultriphelper.Home.PageHomeFragment">
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         android:id="@+id/home_viewpagertab"
