--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.inu.h4.seoultriphelper.MainActivity" >
+    tools:context="com.inu.h4.seoultriphelper.Home.MainActivity" >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
