--- a/app/src/main/res/layout/page_search.xml
+++ b/app/src/main/res/layout/page_search.xml
@@ -17,7 +17,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/imageButton2"
-        android:src="@drawable/page_search_icon"
+        android:src="@drawable/icon_search"
         android:padding="0dp"
         android:scaleType="centerCrop"
         android:background="#00000000"
