일자 : 2016-09-01 11:34                작성자 : MKH                수정내용 :                1. 홈 프래그먼트의 리스트 아이템 추가

--- a/app/src/main/res/layout/page_prefer_test.xml
+++ b/app/src/main/res/layout/page_prefer_test.xml
@@ -10,4 +10,11 @@
         android:dividerHeight="1.5dp"
         android:choiceMode="singleChoice"
     />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="87dp"
+        android:text="다음"
+        android:id="@+id/btn_prefer_test_ok"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
