--- a/app/src/main/res/layout/home_weekly_ranking.xml
+++ b/app/src/main/res/layout/home_weekly_ranking.xml
@@ -7,9 +7,12 @@
     android:layout_height="match_parent"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="week"
-        android:id="@+id/textView17" />
+    <ListView
+        android:id="@+id/home_weekly_ranking_list_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:divider="#ffcc22"
+        android:dividerHeight="1.5dp"
+        android:choiceMode="singleChoice"
+        />
 </LinearLayout>
