--- a/app/src/main/res/layout/page_home.xml
+++ b/app/src/main/res/layout/page_home.xml
@@ -8,34 +8,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.inu.h4.seoultriphelper.Home.PageHomeFragment">
 
-    <com.ogaclejapan.smarttablayout.SmartTabLayout
-        android:id="@+id/home_viewpagertab"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/home_tabs"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="#ff0000"
-        app:stl_indicatorAlwaysInCenter="false"
-        app:stl_indicatorWithoutPadding="false"
-        app:stl_indicatorInFront="false"
-        app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="#ffffff"
-        app:stl_indicatorThickness="4dp"
-        app:stl_indicatorCornerRadius="2dp"
-        app:stl_overlineColor="#4D000000"
-        app:stl_overlineThickness="0dp"
-        app:stl_underlineColor="#4D000000"
-        app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#4D000000"
-        app:stl_dividerThickness="1dp"
-        app:stl_defaultTabBackground="?attr/selectableItemBackground"
-        app:stl_defaultTabTextAllCaps="false"
-        app:stl_defaultTabTextColor="#ffffff"
-        app:stl_defaultTabTextSize="12sp"
-        app:stl_defaultTabTextHorizontalPadding="16dp"
-        app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_distributeEvenly="true"
-        app:stl_clickable="true"
-        />
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"/>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/home_viewpager"
