DB파일 몇가지 추가 메니페스트 퍼미션 추가

--- a/app/src/main/res/layout/review_list.xml
+++ b/app/src/main/res/layout/review_list.xml
@@ -6,6 +6,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/trip_list_id"
+        android:id="@+id/review_list_id"
         android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
