--- a/app/src/main/res/layout/page_prefer_test.xml
+++ b/app/src/main/res/layout/page_prefer_test.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <ListView
         android:id="@+id/prefer_test_list"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
         android:divider="#ffcc22"
         android:dividerHeight="1.5dp"
         android:choiceMode="singleChoice"
+        android:layout_weight="1"
     />
-
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="87dp"
-        android:text="다음"
-        android:id="@+id/btn_prefer_test_ok"
-        android:layout_gravity="center_horizontal" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다시 작성"
+            android:id="@+id/btn_prefer_test_restart"
+            android:layout_marginLeft="75dp"
+            android:layout_marginRight="45dp"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="작성 완료"
+            android:id="@+id/btn_prefer_test_ok"/>
+
+    </LinearLayout>
+
 </LinearLayout>
