--- a/app/src/main/res/layout/page_prefer_test_item.xml
+++ b/app/src/main/res/layout/page_prefer_test_item.xml
@@ -18,7 +18,9 @@
         android:orientation="vertical"
         android:layout_below="@+id/prefer_test_text"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/radio_group"
+        >
         <RadioButton
             android:layout_width="150dp"
             android:layout_height="wrap_content"
