--- a/app/src/main/res/layout/bucket_empty.xml
+++ b/app/src/main/res/layout/bucket_empty.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:weightSum="1">
 
+    <ImageView
+        android:id="@+id/im_bucket"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/bucket_empty" />
+
     <TextView
+        android:id="@+id/txt_no_bucket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/no_bucket"
-        android:id="@+id/txt_no_bucket"
         android:layout_gravity="center_horizontal"
-        android:textSize="25dp"
-        android:layout_marginTop="60dp" />
+        android:layout_marginTop="20dp"
+        android:text="@string/no_bucket"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="25sp" />
 
     <Button
+        android:id="@+id/bt_bucket"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:text="검색하여 추가하기"
-        android:id="@+id/bt_bucket"
         android:layout_gravity="center_horizontal"
-        android:textSize="20dp"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:text="검색하여 추가하기"
+        android:textSize="20sp" />
 </LinearLayout>
