--- a/app/src/main/res/layout/bucket_list.xml
+++ b/app/src/main/res/layout/bucket_list.xml
@@ -3,8 +3,20 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_margin="20dp"
+        android:layout_width="300dp"
+        android:layout_height="220dp"
+        android:layout_gravity="center"
+        android:id="@+id/bucket_list_mapView"
+        ></RelativeLayout>
+
     <GridView
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bucket_list" />
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
+        android:numColumns="2"
+        android:id="@+id/bucket_list_grid_view" />
 </LinearLayout>
