--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/nav_bucket"
             android:icon="@drawable/page_bucket_icon"
-            android:title="장바구니" />
+            android:title="버킷리스트" />
         <item
             android:id="@+id/nav_planner"
             android:icon="@drawable/page_planner_icon"
