--- a/app/src/main/res/layout/home_weekly_ranking.xml
+++ b/app/src/main/res/layout/home_weekly_ranking.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent" >
 
     <ListView
         android:id="@+id/home_weekly_ranking_list_view"
@@ -13,6 +11,5 @@
         android:layout_width="match_parent"
         android:divider="#ffcc22"
         android:dividerHeight="1.5dp"
-        android:choiceMode="singleChoice"
-        />
+        android:choiceMode="singleChoice" />
 </LinearLayout>
