--- a/app/src/main/res/layout/page_home.xml
+++ b/app/src/main/res/layout/page_home.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.inu.h4.seoultriphelper.Home.PageHomeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         android:id="@+id/home_viewpagertab"
