--- a/app/src/main/res/layout/prefer_empty.xml
+++ b/app/src/main/res/layout/prefer_empty.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    tools:context="com.inu.h4.seoultriphelper.Prefer.PagePreferEmptyFragment" >
+    tools:context="com.inu.h4.seoultriphelper.Prefer.PreferEmptyFragment" >
 
     <TextView
         android:layout_width="wrap_content"
