--- a/app/src/main/res/layout/prefer_test_2.xml
+++ b/app/src/main/res/layout/prefer_test_2.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="8dp">
     <ListView
-        android:id="@+id/prefer_test_list"
+        android:id="@+id/prefer_test_list_2"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:divider="#ffcc22"
         android:dividerHeight="1.5dp"
         android:choiceMode="singleChoice"
         android:layout_weight="1"
-    />
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,15 +20,15 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다시 작성"
-            android:id="@+id/btn_prefer_test_restart"
+            android:text="@string/clear_prefer_test"
+            android:id="@+id/btn_prefer_test_restart_2"
             android:layout_marginLeft="75dp"
             android:layout_marginRight="45dp"
             />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="작성 완료"
+            android:text="@string/complete_prefer_test"
             android:id="@+id/btn_prefer_test_ok"/>
 
     </LinearLayout>
