수정사항  1. 태그 관련 페이지 완성. (MIN)  2. 상세보기 페이지    - 리뷰 리스트뷰 오류 미수정.    - 지도 오류 미수정.

--- a/app/src/main/res/layout/tag_select_menu.xml
+++ b/app/src/main/res/layout/tag_select_menu.xml
@@ -13,7 +13,8 @@
 
         <com.inu.h4.seoultriphelper.Tag.TagGroup
             android:id="@+id/tag_group"
-            style="@style/TagGroup.Large" />
+            style="@style/TagGroup"
+            app:atg_isAppendMode="true" />
 
     </LinearLayout>
 
