--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -1,116 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="@android:color/white"
+    android:fillViewport="true">
 
-    <RelativeLayout
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/btn_leftImage"
-            android:src="@drawable/left_black_arrow"
-            android:adjustViewBounds="false"
-            android:scaleType="centerCrop"
-            android:padding="0dp"
-            android:background="#00000000"
-            android:layout_alignTop="@+id/imageButton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp" />
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/imageButton"
-            android:src="@drawable/right_black_arrow"
-            android:cropToPadding="false"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            android:background="#00000000"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="40dp"
-            android:layout_marginEnd="40dp" />
-
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:id="@+id/img_LargeImage"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
-    </RelativeLayout>
-
-    <GridView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/detail_list"
-        android:layout_gravity="center_horizontal"
-        android:choiceMode="singleChoice"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="별점 &amp; 리뷰"
-        android:id="@+id/page_name"
-        android:textSize="30dp"
-        android:textColor="#000"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:orientation="vertical">
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
-        android:layout_alignLeft="@+id/page_name"
-        android:layout_alignStart="@+id/page_name"
-        android:layout_below="@+id/page_name" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@drawable/detail_border">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/currentStar"
-        android:text="1.0"
-        android:textSize="30dp"
-        android:layout_marginTop="9dp"
-        android:layout_alignTop="@+id/ratingBar"
-        android:layout_toRightOf="@+id/ratingBar"
-        android:layout_toEndOf="@+id/ratingBar" />
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/btn_left_image"
+                android:src="@drawable/left_black_arrow"
+                android:adjustViewBounds="false"
+                android:scaleType="centerCrop"
+                android:padding="0dp"
+                android:background="#00000000"
+                android:layout_alignTop="@+id/btn_right_image"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="/ 5.0"
-        android:id="@+id/textView2"
-        android:textSize="30dp"
-        android:layout_alignTop="@+id/currentStar"
-        android:layout_toRightOf="@+id/currentStar"
-        android:layout_toEndOf="@+id/currentStar"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp" />
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/btn_right_image"
+                android:src="@drawable/right_black_arrow"
+                android:cropToPadding="false"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:background="#00000000"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/ratingBar"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:id="@+id/detail_main_image"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
 
-</LinearLayout>
+        </RelativeLayout>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:scrollbars="none"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:paddingTop="10dp">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/detail_subimage_layout">
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/detail_border">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:id="@+id/detail_sight_name"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="추천 수"
+                android:textSize="22sp"
+                android:id="@+id/detail_recommend_text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_alignBottom="@+id/detail_sight_name"
+                android:layout_toRightOf="@+id/detail_sight_name"
+                android:layout_toEndOf="@+id/detail_sight_name" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:id="@+id/detail_sight_recommend_count"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_alignBottom="@+id/detail_recommend_text"
+                android:layout_toRightOf="@+id/detail_recommend_text"
+                android:layout_toEndOf="@+id/detail_recommend_text" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:id="@+id/detail_sight_info"
+                android:layout_alignParentBottom="true"
+                android:layout_alignLeft="@+id/detail_sight_name"
+                android:layout_alignStart="@+id/detail_sight_name"
+                android:layout_marginBottom="20dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/detail_map_layout"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/detail_border">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_point_and_review"
+                android:id="@+id/detail_review_title"
+                android:textSize="30sp"
+                android:textColor="#000"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_ratingBar"
+                android:layout_alignLeft="@+id/detail_review_title"
+                android:layout_alignStart="@+id/detail_review_title"
+                android:layout_below="@+id/detail_review_title" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/detail_current_point"
+                android:text="@string/detail_default_point"
+                android:textSize="20sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_alignTop="@+id/detail_ratingBar"
+                android:layout_toRightOf="@+id/detail_ratingBar"
+                android:layout_toEndOf="@+id/detail_ratingBar" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_max_point"
+                android:textSize="20sp"
+                android:layout_alignTop="@+id/detail_current_point"
+                android:layout_toRightOf="@+id/detail_current_point"
+                android:layout_toEndOf="@+id/detail_current_point"
+                android:layout_marginLeft="11dp"
+                android:layout_marginStart="11dp" />
+
+        </RelativeLayout>
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/detail_review_list_view"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+    </LinearLayout>
+</ScrollView>
