수정사항  1. 상세보기 페이지    - 이미지, 세부정보, 리뷰목록 DB 연동 완성    - 지도 오류 미수정.

--- a/app/src/main/res/layout/detail_review_dialog.xml
+++ b/app/src/main/res/layout/detail_review_dialog.xml
@@ -13,14 +13,16 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:background="@android:color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_review_dialog_rating"
             android:numStars="5"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
         <EditText
             android:id="@+id/detail_review_dialog_writer"
@@ -29,14 +31,6 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:hint="@string/detail_review_dialog_writer"/>
-
-        <EditText
-            android:id="@+id/detail_review_dialog_title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:hint="@string/detail_review_dialog_title"/>
 
         <EditText
             android:id="@+id/detail_review_dialog_content"
