--- a/app/src/main/res/layout/detail_review_list_item.xml
+++ b/app/src/main/res/layout/detail_review_list_item.xml
@@ -5,39 +5,50 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp">
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/detail_review_writer"
-        android:textSize="27sp"
+        android:textSize="25sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp" />
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"/>
 
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/detail_review_rating"
         style="?android:attr/ratingBarStyleIndicator"
-        android:layout_alignBottom="@+id/detail_review_writer"
-        android:layout_toRightOf="@+id/detail_review_writer"
-        android:layout_toEndOf="@+id/detail_review_writer"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_below="@+id/detail_review_writer"
+        android:layout_alignLeft="@+id/detail_review_writer"
+        android:layout_alignStart="@+id/detail_review_writer" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:id="@+id/detail_review_content"
-        android:layout_below="@+id/detail_review_writer"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:textSize="20sp"/>
+        android:id="@+id/detail_review_date"
+        android:textSize="20sp"
+        android:layout_alignBottom="@+id/detail_review_rating"
+        android:layout_toRightOf="@+id/detail_review_rating"
+        android:layout_toEndOf="@+id/detail_review_rating" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/detail_review_info"
+        android:textSize="18sp"
+        android:layout_below="@+id/detail_review_rating"
+        android:layout_alignLeft="@+id/detail_review_rating"
+        android:layout_alignStart="@+id/detail_review_rating"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"/>
+
 </RelativeLayout>
