--- a/app/src/main/res/layout/bucket_list.xml
+++ b/app/src/main/res/layout/bucket_list.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/BucketDBView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <RelativeLayout
         android:layout_margin="20dp"
         android:layout_width="300dp"
