--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,11 +2,9 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
-
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/page_search_icon"
-        app:showAsAction="ifRoom"
-        android:title="검색" />
-
+    <item android:id="@+id/action_search"
+        android:title="@string/abc_search_hint"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
