--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -24,7 +24,6 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:id="@+id/home_sight_name"
-        android:layout_above="@+id/btn_home_recommend"
         android:layout_alignRight="@+id/home_sight_image"
         android:layout_alignEnd="@+id/home_sight_image"
         android:textSize="38sp"
@@ -37,20 +36,56 @@
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/home_recommend_count"
+        android:textSize="20sp"
+        android:layout_above="@+id/home_rating_bar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
     <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/btn_home_recommend"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:id="@+id/home_recommend_icon"
+        android:background="@drawable/icon_recommend"
+        android:layout_above="@+id/home_rating_bar"
+        android:layout_toLeftOf="@id/home_recommend_count"
+        android:layout_toStartOf="@id/home_recommend_count"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/home_rating_bar"
+        style="?android:attr/ratingBarStyleIndicator"
         android:layout_alignBottom="@+id/home_sight_image"
-        android:layout_centerHorizontal="true"
-        android:text="추천"
-        />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/btn_home_more_info"
-        android:text="더보기"
+        android:layout_toRightOf="@+id/btn_home_get_bucket"
+        android:layout_toEndOf="@+id/btn_home_get_bucket"
+        android:layout_marginLeft="22dp"
+        android:layout_marginStart="22dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/detail_max_point"
+        android:id="@+id/home_rating_max_point"
+        android:textSize="18sp"
         android:layout_alignBottom="@+id/home_sight_image"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/home_rating_current_point"
+        android:text="@string/detail_default_point"
+        android:textSize="18sp"
+        android:layout_alignBottom="@+id/home_sight_image"
+        android:layout_toRightOf="@+id/home_rating_bar"
+        android:layout_toEndOf="@+id/home_rating_bar"/>
+
 </RelativeLayout>
