--- a/app/src/main/res/layout/planner.xml
+++ b/app/src/main/res/layout/planner.xml
@@ -4,16 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="상세보기임시버튼"
-        android:id="@+id/btn_temp" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView4"
+        android:id="@+id/PlannerListView"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
