--- a/app/src/main/res/layout/prefer_full.xml
+++ b/app/src/main/res/layout/prefer_full.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
-
+    android:layout_height="match_parent">
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="@string/check_prefer_sight"
-        android:id="@+id/bt_recommend"
-        android:textSize="20sp"
-        android:layout_marginBottom="55dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="40dp"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textSize="14sp"
+        android:text="@string/prefer_delete_index"
+        />
+
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:id="@+id/prefer_character_image"
+        android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="200dp"
@@ -22,19 +25,19 @@
         android:textSize="22sp"
         android:id="@+id/prefer_result_text_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp"
-        android:textAlignment="center"/>
+        android:layout_below="@+id/prefer_character_image"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"/>
     <TextView
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/prefer_result_text_content"
-        android:layout_gravity="center_horizontal"
         android:textSize="18sp"
         android:textAlignment="center"
-        android:layout_marginTop="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/prefer_result_text_title"
+        android:layout_marginTop="30dp"
+        />
 
     <Button
         android:layout_width="128dp"
@@ -47,6 +50,18 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="50dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="@string/check_prefer_sight"
+        android:id="@+id/bt_recommend"
+        android:textSize="20sp"
+        android:layout_marginBottom="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="40dp"/>
 
 
 </RelativeLayout>
