--- a/app/src/main/res/layout/tag_select_menu.xml
+++ b/app/src/main/res/layout/tag_select_menu.xml
@@ -2,45 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tag_menu">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/tag_group_layout">
-
-        <com.inu.h4.seoultriphelper.Tag.TagGroup
-            android:id="@+id/tag_group"
-            style="@style/TagGroup"
-            app:atg_isAppendMode="true" />
-
-    </LinearLayout>
-
-    <Button
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="취소"
-        android:id="@+id/btn_tag_cancle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="80dp"
-        android:layout_below="@+id/tag_group_layout" />
+        android:id="@+id/tag_group_listview"
+        android:layout_marginBottom="5dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="확인"
         android:id="@+id/btn_tag_confirm"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/tag_group_listview"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="80dp"
-        android:layout_below="@+id/tag_group_layout" />
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="취소"
+        android:id="@+id/btn_tag_cancle"
+        android:layout_below="@+id/tag_group_listview"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
