--- a/app/src/main/res/layout/tag_content_item.xml
+++ b/app/src/main/res/layout/tag_content_item.xml
@@ -6,43 +6,36 @@
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:id="@+id/tag_sight_image"
+        android:id="@+id/img_tag_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:id="@+id/tag_sight_name"
-        android:layout_above="@+id/btn_tag_recommend"
-        android:layout_alignRight="@+id/tag_sight_image"
-        android:layout_alignEnd="@+id/tag_sight_image"
+        android:id="@+id/text_tag_sight_name"
+        android:layout_alignRight="@+id/img_tag_content"
+        android:layout_alignEnd="@+id/img_tag_content"
         android:textSize="38sp"
         android:gravity="center"/>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/btn_tag_recommend"
+        android:layout_alignBottom="@+id/img_tag_content"
+        android:layout_centerHorizontal="true"
+        android:text="추천" />
+
     <Button
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:id="@+id/btn_tag_get_bucket"
         android:text="담기"
-        android:layout_alignBottom="@+id/tag_sight_image"
+        android:layout_alignBottom="@+id/img_tag_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/btn_tag_recommend"
-        android:layout_alignBottom="@+id/tag_sight_image"
-        android:layout_centerHorizontal="true"
-        android:text="추천"
-        />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:id="@+id/btn_tag_more_info"
-        android:text="더보기"
-        android:layout_alignBottom="@+id/tag_sight_image"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 </RelativeLayout>
