--- a/app/src/main/res/layout/planner_edit_dialog.xml
+++ b/app/src/main/res/layout/planner_edit_dialog.xml
@@ -31,7 +31,8 @@
                 android:inputType="numberDecimal"
                 android:layout_below="@+id/time"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"
+                android:hint="@string/hourandminute"/>
 
             <TextView
                 android:text="시"
@@ -42,7 +43,7 @@
                 android:layout_alignBottom="@+id/inputhour_S"
                 android:layout_toRightOf="@+id/inputhour_S"
                 android:layout_toEndOf="@+id/inputhour_S"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
 
             <EditText
                 android:id="@+id/inputminute_S"
@@ -52,7 +53,8 @@
                 android:layout_below="@+id/time"
                 android:layout_toRightOf="@+id/Hour_S"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"
+                android:hint="@string/hourandminute"/>
 
             <TextView
                 android:text="분"
@@ -88,7 +90,8 @@
                 android:layout_toRightOf="@+id/hrp2"
                 android:layout_toEndOf="@+id/hrp2"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"
+                android:hint="@string/hourandminute"/>
 
             <TextView
                 android:text="시"
@@ -109,7 +112,8 @@
                 android:layout_below="@+id/time"
                 android:layout_toRightOf="@+id/Hour_E"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content" />
+                android:layout_width="wrap_content"
+                android:hint="@string/hourandminute"/>
 
             <TextView
                 android:text="분"
