--- a/app/src/main/res/layout/planner_submit_layout.xml
+++ b/app/src/main/res/layout/planner_submit_layout.xml
@@ -9,7 +9,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/abc_btn_check_to_on_mtrl_015" />
+        android:src="@drawable/abc_btn_check_to_on_mtrl_015"
+        android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="wrap_content"
