--- a/app/src/main/res/layout/tag_main.xml
+++ b/app/src/main/res/layout/tag_main.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal"
         android:layout_marginBottom="-4dp"
         android:weightSum="1" >
-        
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
             android:layout_marginRight="-3dp"
             android:padding="0dp"
             android:layout_weight="0.2"/>
-        
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,11 +111,11 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:id="@+id/tag_select_menu_container"
             android:visibility="gone"
             android:background="#FFFFFF"
@@ -130,6 +130,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:id="@+id/tag_content" >
+
+            <com.inu.h4.seoultriphelper.Tag.TagGroup
+                android:id="@+id/selected_tag_group"
+                style="@style/TagGroup.Default.Inverse"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="gone" />
 
             <ListView
                 android:id="@+id/tag_content_listview"
